Bug 4840: Scroll bar on the right not visible

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -423,7 +423,7 @@
   --alert-error-background: #FFF9F8;
 
   ::-webkit-scrollbar {
-    width: 0.750rem;
+    width: 0.500rem;
   }
 
   --text-area-disabled-color: var(--color-secondary-200);
